--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="input-group">
-          <label for="email-label" id="emai-label">Email </label>
+          <label for="email-label" id="email-label">Email </label>
           <input
             type="email"
             id="email"
@@ -47,11 +47,12 @@
         </div>
 
         <div class="input-group">
-          <label for="age-label" id="age-label">Age (Optional) </label>
+          <label for="age-label" id="number-label">Age (Optional) </label>
           <input
             type="number"
             class="age"
             name="age"
+            id="number"
             min="10"
             max="99"
             placeholder="Enter your Age"
@@ -294,9 +295,21 @@
           <input type="submit" value="Submit" id="submit" />
         </div>
       </form>
-      <footer class="main-footer">
-        <p>Bini Blissful &copf;2020 All Rights Reserved</p>
-      </footer>
     </div>
+
+    <footer class="main-footer">
+      <p>Bini Blissful &copf;2020 All Rights Reserved</p>
+    </footer>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+    <!-- 
+
+Hello Camper!
+
+For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
+
+- The freeCodeCamp Team 
+
+-->
   </body>
 </html>
